finished new page
Users should be able to enter a title for the page and, in a textarea, should be able to enter the Markdown content for the page.
Users should be able to click a button to save their new page.
When the page is saved, if an encyclopedia entry already exists with the provided title, the user should be presented with an error message.
Otherwise, the encyclopedia entry should be saved to disk, and the user should be taken to the new entry’s page.

--- a/encyclopedia/templates/encyclopedia/not_found.html
+++ b/encyclopedia/templates/encyclopedia/not_found.html
@@ -8,5 +8,5 @@
     <h1>{{ Title }}?</h1>
     <h5>Looks new to me!</h5>
     It looks like your page dosent exist yet!
-    Feel free to Add it if you'd like 
+    Feel free to <a href="/Add">Add</a> it if you'd like 
 {% endblock %}
