--- a/encyclopedia/templates/encyclopedia/add.html
+++ b/encyclopedia/templates/encyclopedia/add.html
@@ -5,11 +5,13 @@
 {% endblock %}
 
 {% block body%}
+
     <h1>Adding a page?</h1>
-    <form method = "POST">
+    <form  method="POST" action="{% url "Add" %}">
+        {% csrf_token %}
         <div class="form-group">
             <label for="TheTitle" style="margin-bottom:0px; margin-top:10px;"><h5>Title</h5></label>
-            <input type="email" class="form-control col-sm-2" id="TheTitle" name="T" placeholder="Example: Kotlin">
+            <input class="form-control col-sm-2" id="TheTitle" name="T" placeholder="Example: Kotlin">
             <small class="form-text text-muted">Write the title of your page here.</small>
         </div>
         <div class="form-group">
@@ -17,6 +19,16 @@
             <textarea class="form-control col-sm-8" id="TheData" name="D" rows="4"></textarea>
             <small class="form-text text-muted">Write the text in markdown format here.</small>
         </div>
-        <button type="submit" class="btn btn-primary">Add page</button>
-    <form>
+        <button type="submit"  class="btn btn-primary">Add page</button>
+    </form>
+    {% if  Existing  == 1 %}
+        <div class="alert alert-danger col-sm-8" role="alert" style="margin-top:10px;">
+            This page title already exist!
+        </div>
+    {% endif %}
+    {% if  Existing  == 2 %}
+        <div class="alert alert-success col-sm-8" role="alert" style="margin-top:10px;">
+            Fantastic job! Your page has been successfully added.
+        </div>
+    {% endif %}
 {% endblock %}
