--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -7,23 +7,25 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/d61c00eed6.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
+                <h2><i class="fa-solid fa-book-atlas"></i>   Wiki</h2>
                 <form action={% url "search" %} method="GET">
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" name="q" placeholder="Search Encyclopedia" aria-label="Search Encyclopedia" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-primary" type="submit">search</button>
+                        </div>
+                    </div>
                 </form>
-                <div>
-                    <a href="{% url 'index' %}">Home</a>
-                </div>
-                <div>
-                    <a href="{% url 'Add' %}">Create New Page</a>
-                </div>
-                <div>
-                    <a href="{% url 'random' %}">Random Page</a>
-                </div>
+                <nav class="nav flex-column">
+                    <a class="nav-link " href="{% url 'index' %}"><i class="fa-solid fa-house"></i> Home</a>
+                    <a class="nav-link" href="{% url 'Add' %}"><i class="fa-solid fa-pen"></i> Create New Page</a>
+                    <a class="nav-link" href="{% url 'random' %}"><i class="fa-solid fa-shuffle"></i> Random Page</a>
+                  </nav>
                 {% block nav %}
                 {% endblock %}
             </div>
